Prevent navbar text wrapping

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -68,6 +68,12 @@
   color: white;
 }
 
+@media (min-width: 768px) and (max-width:991px) {
+  .navbar-default .nav li a {
+    font-size: 0.8em;
+  }
+}
+
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
   color: #fed136;
